improve client side mustache panel.

--- a/samples/src/main/java/de/agilecoders/wicket/HomePage.html
+++ b/samples/src/main/java/de/agilecoders/wicket/HomePage.html
@@ -23,6 +23,9 @@
             Price: {{price}}&lt;br&gt;
             {{#features}}
             "Feature": {{.}}&lt;br&gt;
+            {{/features}}
+            {{^eatures}}
+            no features.
             {{/features}}&lt;br&gt;
             {{/items}}</code></pre>
             </p>
