--- a/samples/src/main/java/de/agilecoders/wicket/HomePage.html
+++ b/samples/src/main/java/de/agilecoders/wicket/HomePage.html
@@ -39,6 +39,11 @@
 
             <p wicket:id="template-client">
             </p>
+
+            <h3>Result (client side lazy rendering):</h3>
+
+            <p wicket:id="template-lazy">
+            </p>
         </div>
         <div id="ft">
         </div>
